<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_pokemon"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.pokemon.PokemonFragment">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/fragment_pokemon_sprite"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_margin="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/fragment_pokemon_index_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/lato"
        android:text="@string/fragment_pokemon_index_name"
        android:textColor="@color/colorTextStandard"
        android:textSize="30sp"
        android:textAllCaps="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_pokemon_sprite"/>

    <TextView
        android:id="@+id/fragment_pokemon_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/lato"
        android:text="@string/fragment_pokemon_counter"
        android:textColor="@color/colorTextStandard"
        android:textSize="18sp"
        android:textAllCaps="true"
        app:layout_constraintTop_toBottomOf="@id/fragment_pokemon_index_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/fragment_pokemon_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/lato"
        android:text="@string/fragment_pokemon_weight"
        android:textColor="@color/colorTextStandard"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/fragment_pokemon_counter"
        app:layout_constraintRight_toLeftOf="@id/fragment_pokemon_height"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/fragment_pokemon_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/lato"
        android:text="@string/fragment_pokemon_height"
        android:textColor="@color/colorTextStandard"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/fragment_pokemon_counter"
        app:layout_constraintLeft_toRightOf="@id/fragment_pokemon_weight"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/fragment_pokemon_type1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/lato"
        android:text="@string/fragment_pokemon_type1"
        android:textColor="@color/colorTextStandard"
        android:textSize="18sp"
        android:textAllCaps="true"
        app:layout_constraintTop_toBottomOf="@id/fragment_pokemon_weight"
        app:layout_constraintRight_toLeftOf="@id/fragment_pokemon_type2"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/fragment_pokemon_type2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/lato"
        android:text="@string/fragment_pokemon_type2"
        android:textColor="@color/colorTextStandard"
        android:textSize="18sp"
        android:textAllCaps="true"
        app:layout_constraintTop_toBottomOf="@id/fragment_pokemon_weight"
        app:layout_constraintLeft_toRightOf="@id/fragment_pokemon_type1"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/fragment_pokemon_description_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="25dp"
        android:fontFamily="@font/lato"
        android:text="@string/fragment_pokemon_description_label"
        android:textAllCaps="true"
        android:textColor="@color/colorTextStandard"
        android:textSize="22sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_pokemon_type1"/>

    <TextView
        android:id="@+id/fragment_pokemon_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:fontFamily="@font/lato"
        android:text="@string/fragment_pokemon_description"
        android:textColor="@color/colorTextLight"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/fragment_pokemon_description_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
</android.support.constraint.ConstraintLayout>